# fastapi-simple

./: alembic.ini  docker-compose.yml  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 3731827f6fd3_initial_migration.py  8bb87dd0fcdc_initial_migration.py  b30721e0868c_initial_migration.py  fd5ffc30415d_initial_migration.py
app/: database.py  main.py  models.py  schemas.py
app/routers/: users.py
app/services/: user_service.py
tests/: test_users.py
