[tool.poetry]
name = "simple-fastapi-project"
version = "0.1.0"
description = "Simple FastAPI project"
authors = ["zubayr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = {extras = ["email"], version = "^2.10.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
