[tool.poetry]
name = "simple-fastapi-project"
version = "0.1.0"
description = "Simple FastAPI project"
authors = ["zubayr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = {extras = ["email"], version = "^2.10.3"}
sqlalchemy = "^2.0.36"
httpx = "^0.28.1"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
